<?xml version="1.0" encoding="utf-8"?>
<!-- This file is /res/xml/flightoptions.xml -->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="flight_option_preference"
    android:title="@string/prefTitle"
    android:summary="@string/prefSummary">
 <ListPreference
    android:key="locale"
    android:title="@string/pref_localetitle"
    android:summary="@string/pref_localesummary"
    android:entries="@array/locale"
    android:entryValues="@array/locale_val"
    android:dialogTitle="@string/pref_localedialogtitle"
    android:defaultValue="zh_TW" />
  <ListPreference
    android:key="fontsize"
    android:title="@string/pref_fontsizeTitle"
    android:summary="@string/pref_fontsizeSummary"
    android:entries="@array/font_size"
    android:entryValues="@array/font_size_val"
    android:dialogTitle="@string/pref_fontdialogTitle"
    android:defaultValue="16" />

    <org.ray.widget.CustomPreference
            android:key="fontcolor"
            android:title="@string/title_fontcolor"
            android:summary="@string/pref_setfontcolor"
            android:defaultValue="-16777216" />   
</PreferenceScreen>

